WIP - Fixed the responsive view on mobile. Working.

--- a/app/assets/stylesheets/home/index.scss
+++ b/app/assets/stylesheets/home/index.scss
@@ -1,7 +1,11 @@
 @import url("https://fonts.googleapis.com/css?family=Open+Sans:400,600,400italic,600italic|Roboto+Slab:400,700");
 
-/* Reset */
+/* Gallery */
+  #links img.treehouse-pic {
+    width: 100%;
+  }
 
+/* Reset */
 	html, body, div, span, applet, object, iframe, h1, h2, h3, h4, h5, h6, p, blockquote, pre, a, abbr, acronym, address, big, cite, code, del, dfn, em, img, ins, kbd, q, s, samp, small, strike, strong, sub, sup, tt, var, b, u, i, center, dl, dt, dd, ol, ul, li, fieldset, form, label, legend, table, caption, tbody, tfoot, thead, tr, th, td, article, aside, canvas, details, embed, figure, figcaption, footer, header, hgroup, menu, nav, output, ruby, section, summary, time, mark, audio, video {
 		margin: 0;
 		padding: 0;
@@ -3527,10 +3531,6 @@
 
 		}
 
-/* Gallery */
-  #links img.treehouse-pic {
-    width: 100%;
-  }
 /* Sidebar */
 
 	#search form {
@@ -3790,9 +3790,8 @@
 		display: -ms-flex;
 		display: flex;
 		border-bottom: solid 5px #f56a6a;
-		padding: 1em 0 0 0;
+		padding: 6em 0 1em 0;
 		position: relative;
-    font-size: 2.8em;
 	}
 
 		#header > * {
@@ -3814,7 +3813,19 @@
 			text-align: right;
 		}
 
+		@media screen and (max-width: 1680px) {
+
+			#header {
+				padding-top: 5em;
+			}
+
+		}
+
 		@media screen and (max-width: 736px) {
+
+			#header {
+				padding-top: 6.5em;
+			}
 
 				#header .logo {
 					font-size: 1.25em;
